_new_participant.html.erbとshow.html.erbを修正

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,5 +30,7 @@
   <%= @course.upper_limit %>
 </p>
 
+<%= render partial: 'new_participant', locals:{participant: Participant.new} %>
+
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
