showにparticipantが表示されるようにコード追加 showにコースIDが自動で引き渡され、hiddenする処理を追加

--- a/app/views/courses/_new_participant.html.erb
+++ b/app/views/courses/_new_participant.html.erb
@@ -16,8 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :course_id %><br>
-    <%= f.number_field :course_id %>
+    <%= f.hidden_field :course_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
